[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/Scenes/Playlists/Options/SmartPlaylistOptions.gd" type="Script" id=1]
[ext_resource path="res://src/Themes/General/Popup.tres" type="Theme" id=2]

[node name="SmartPlaylistOptions" type="PanelContainer"]
margin_right = 170.0
margin_bottom = 246.0
rect_min_size = Vector2( 170, 0 )
theme = ExtResource( 2 )
script = ExtResource( 1 )

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_left = 1.0
margin_top = 1.0
margin_right = 169.0
margin_bottom = 245.0
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 20

[node name="OptionVBox" type="VBoxContainer" parent="MarginContainer"]
margin_left = 10.0
margin_top = 10.0
margin_right = 158.0
margin_bottom = 224.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )

[node name="SetPlaylistCover" type="Button" parent="MarginContainer/OptionVBox"]
margin_right = 148.0
margin_bottom = 25.0
rect_min_size = Vector2( 0, 25 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Set Playlist Cover"

[node name="EditConditions" type="Button" parent="MarginContainer/OptionVBox"]
margin_top = 27.0
margin_right = 148.0
margin_bottom = 52.0
rect_min_size = Vector2( 0, 25 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Edit Conditions"

[node name="Rename" type="Button" parent="MarginContainer/OptionVBox"]
margin_top = 54.0
margin_right = 148.0
margin_bottom = 79.0
rect_min_size = Vector2( 0, 25 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Rename"

[node name="TagPlaylist" type="Button" parent="MarginContainer/OptionVBox"]
margin_top = 81.0
margin_right = 148.0
margin_bottom = 106.0
rect_min_size = Vector2( 0, 25 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Tag Playlist"

[node name="Export" type="Button" parent="MarginContainer/OptionVBox"]
margin_top = 108.0
margin_right = 148.0
margin_bottom = 133.0
rect_min_size = Vector2( 0, 25 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Export"

[node name="DeletePlaylist" type="Button" parent="MarginContainer/OptionVBox"]
margin_top = 135.0
margin_right = 148.0
margin_bottom = 160.0
rect_min_size = Vector2( 0, 25 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Delete"

[node name="ToPlaylists" type="Button" parent="MarginContainer/OptionVBox"]
margin_top = 162.0
margin_right = 148.0
margin_bottom = 187.0
rect_min_size = Vector2( 0, 25 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Return"

[node name="Close" type="Button" parent="MarginContainer/OptionVBox"]
margin_top = 189.0
margin_right = 148.0
margin_bottom = 214.0
rect_min_size = Vector2( 0, 25 )
mouse_default_cursor_shape = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Close"
